--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-bootstrap": "^0.32.32",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-star-rating-component": "^1.4.1",
     "bootstrap": "^5.2.3",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
@@ -20,7 +21,8 @@
     "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0"
+    "react-router-dom": "^6.9.0",
+    "react-star-rating-component": "^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
